--- a/styles.css
+++ b/styles.css
@@ -8,27 +8,34 @@ html {
   min-height: 100vh;
   max-height: 100vh;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1.5fr 10fr 0.5fr;
+  grid-template-rows: 0.5fr 1.5fr 10fr 0.5fr;
   grid-template-areas:
+  "line line"
   "header header"
   "options grid-area"
-  "footer footer"
+  "footer footer";
+  background-color: rgb(245, 245, 245);
 }
 
-#title {
+#pink-line {
+ background-color: pink;
+ grid-area: line;
+}
+
+#header {
+  display:block;
   font-size: 3rem;
-  padding-top: 1rem;
+  padding-top: 1rem; 
   grid-area: header;
-  background-color: pink;
+  justify-content: center;
 }
 
 #options {
-  background-color: blueviolet;
   grid-area: options;
 }
 
 #grid-container {
-  background-color: rgb(235, 211, 211);
+  /*background-color: rgb(235, 211, 211);*/
   grid-area: grid-area;
 }
 
@@ -38,25 +45,23 @@ html {
 }
 
 #grid {
-  margin-top: 5rem;
   max-width: 500px;
   min-height: 500px;
   display: grid;
-  grid-template-columns: repeat(16, auto);
-  grid-template-rows: repeat(16, auto);
-  grid-gap: 5px;
+  /*grid-gap: 2px;*/
   border: solid orange;
   background-color: white;
 }
 
 .square {
-  background-color: rgb(255, 255, 255);
+  /*background-color: rgb(255, 219, 219);*/
 }
 
 .button-container {
   max-width: 15rem;
   display: flex;
   flex-direction: column;
+  /*background-color: blueviolet;*/
 
 }
 
@@ -69,6 +74,13 @@ button {
 
 button:hover {
   border: solid orange;
+}
+
+.slidecontainer {
+  max-width: 15rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .slider {
@@ -105,3 +117,4 @@ button:hover {
   background: #04AA6D;
   cursor: pointer;
 }
+
