--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,12 @@ html {
 }
 
 #header {
-  font-size: 4.2rem;
-  min-height: 5rem;
   padding-left: 1.3rem;
   grid-area: header;
-  color: rgb(0, 0, 0);
+  height: 57px;
+  width: 496px;
   display: flex;
-  align-self: center;*/
+  align-self: center;
 }
 
 #options {
@@ -54,14 +53,9 @@ html {
   width: 31rem;
   height: 31rem;
   display: grid;
-  /*grid-gap: 2px;*/
   border: 1px solid orange;
   box-shadow:0 0 4px orange;
   background-color: white;
-}
-
-.square {
-  /*background-color: rgb(255, 219, 219);*/
 }
 
 .button-container {
@@ -72,19 +66,41 @@ html {
   flex-direction: column;
 }
 
+#color-picker{
+  -webkit-appearance: none;
+  width: 15rem;
+  height: 3.2rem;
+  border-radius: 1rem;
+  padding: 0.6rem;
+  border: 1px solid blueviolet;
+  box-shadow: 0 0 4px blueviolet;
+}
+
+#color-picker::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+#color-picker::-webkit-color-swatch {
+  border-radius: 0.8rem;
+}
+
+#color-picker:hover {
+  border: 1px solid rgb(166, 70, 255);
+  box-shadow: 0 0 5px rgb(182, 104, 255);
+  background-color: rgb(249, 249, 249);
+}
+
 button {
   font-family: 'Rampart One', cursive;
   padding: 0.8rem 6rem 0.8rem 6rem;
   margin-top: 1.3em;
-  border-radius: 1em;
+  border-radius: 1rem;
   border: 1px solid blueviolet;
   box-shadow: 0 0 4px blueviolet;
   background-color: rgb(245, 245, 245);
 }
 
 button:hover {
-  /*border: 1px solid orange;
-  box-shadow: 0 0 4px orange;*/
   border: 1px solid rgb(166, 70, 255);
   box-shadow: 0 0 5px rgb(182, 104, 255);
   background-color: rgb(249, 249, 249);
@@ -94,8 +110,7 @@ button:hover {
   max-width: 15rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  
+  align-items: center; 
 }
 
 .slider {
